# dfdl-rs

./: Cargo.toml  README.md
dfdl/: Cargo.toml  LICENSE
dfdl-test/: Cargo.toml  include.xsd  test  test.xsd
dfdl-test/src/: error.rs  lib.rs  main.rs  properties.rs
dfdl/src/: lib.rs
dfdl/src/serde/: deserialize.rs  mod.rs  serialize.rs
